r2e-compile-tests/cases/decorators/fail/guard_path_symbol_unknown.stderr
error[E0425]: cannot find value `missing` in module `path`
  --> cases/decorators/fail/guard_path_symbol_unknown.rs:47:40
   |
47 |     #[guard(ProjectGuard::viewer(path::missing))]
   |                                        ^^^^^^^ not found in `path`
